// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Renders correctly checked 1`] = `
<Text
  accessibilityLabel="checkbox:checked"
  style={
    Object {
      "color": "#000",
      "fontSize": 30,
    }
  }
>
  ☑
</Text>
`;

exports[`Renders correctly unchecked 1`] = `
<Text
  accessibilityLabel="checkbox:unchecked"
  style={
    Object {
      "color": "#000",
      "fontSize": 30,
    }
  }
>
  ⬜
</Text>
`;
